[project]
name = "image-funcut"
description = "View, analyse and transform dynamic imaging data"
dynamic = ["version"]
authors = [
    {name = "Alexey Brazhe", email = "brazhe@gmail.com"},
]
dependencies = [
    "dill>=0.2.4",
    "h5py>=2.5.0",
    "numba>=0.20.0",
    "numpy",
    "pandas>=1.0",
    "scikit-image>=0.11.0",
    "scipy",
    "swan>=0.6.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/abrazhe/image-funcut"

#[project.scripts]
#stabilize-framesequence = "stabilize_framesequence:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes=['imfun/']

# [tool.pdm.build.wheel-data]
# scripts = ["scripts/funcut.py", "scripts/stabilize-framesequence.py"]

[tool.pdm.module]
name='imfun'

# [tool.pdm.package-dir]
# imfun = "imfun"

[tool.pdm.version]
source = "scm"
write_to = "imfun/_version_pdm.py"
write_template = "__version__ = '{}'"
